samples/_failures_safe/1761165247_9fe5a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_645091e0.c: In function ‘main’:
./samples/SAFE/__tmp_645091e0.c:171:27: error: expected ‘)’ at end of input
  171 |         if (tokens->tokens
      |            ~              ^
      |                           )
./samples/SAFE/__tmp_645091e0.c:171:9: error: expected declaration or statement at end of input
  171 |         if (tokens->tokens
      |         ^~
./samples/SAFE/__tmp_645091e0.c:171:9: error: expected declaration or statement at end of input
